@@ -22,6 +22,7 @@
 - add configuration option to use fqdn in mounts.
 - fix out of order call in program map lookup.
 - fix error handling of is_mounted().
+- Add a mode option for master map entries.
 
 21/04/2015 autofs-5.1.1
 =======================
